opam-version: "2.0"
name: "qiskit"
version: "2.0.1"
synopsis: "Qiskit for OCaml"
description: """
An OCaml wrapper for the Qiskit quantum computing toolkit
"""
maintainer: "Davide Gessa <gessadavide@gmail.com>"
authors: [
  "Davide Gessa <gessadavide@gmail.com>"
]

homepage: "https://github.com/dakk/caml_qiskit"
bug-reports: "https://github.com/dakk/caml_qiskit/issues"
license: "MIT"
dev-repo: "git+https://github.com/dakk/caml_qiskit.git"
build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "ocaml" {>= "4.14.0"}

  "dune" {>= "3.10.0"}
  "pyml" {>= "20250807"}

  "ounit2" {with-test & >= "2.2.7"}

  "odoc" {with-doc & >= "2.2.1"}
  "bisect_ppx" {with-dev-setup & >= "2.8.3"}
]

depexts: [
]
